css/style.css
.site {
    max-width: auto;
    margin: auto;
    text-align: center;
}


body {
    /*via https://cssgradient.io/*/
    background: rgb(21,17,84);
    background: linear-gradient(90deg, rgba(21,17,84,1) 0%, rgba(9,9,121,1) 6%, rgba(0,212,255,1) 100%);
    font-family: Arial, Helvetica, sans-serif;
    justify-content: center;
  }

  .topnav {
    background-color: #00539F;
    overflow: hidden;
  }
  
  /* Style the links inside the navigation bar */
  .topnav a {
    float: left;
    color: #f2f2f2;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
  }
  
  /* Change the color of links on hover */
  .topnav a:hover {
    background-color: #ddd;
    color: black;
  }
  
  /* Add a color to the active/current link */
  .topnav a.active {
    background-color: #FFD200;
    color: white;
  }

  .topnav a.far-plus {
    float: right;
  }

  input[type=text], select {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
  }
  input[type=tel], select {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
  }
  input[type=email], select {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
  }
  
  input[type=submit] {
    width: 100%;
    background-color: #FFD200;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
  }
  
  input[type=submit]:hover {
    background-color: #FFD200;
  }
  
  .email_form {
    border-radius: 5px;
    background-color: #f2f2f2;
    padding: 20px;
  }

  h1{
      color: gold;
  }
  h2{
      color: white;
  }
  p{
      color: white;
  }
  li{
      color: white;
  }
  a{
      color: white;
  }

  #flex{
    display: flex;
  }
  .flexchild{
    flex: 1;
  }

  .dropdown {
    float: left;
    overflow: hidden;
  }
  
  .dropdown .dropbtn {
    font-size: 16px;  
    border: none;
    outline: none;
    color: white;
    padding: 14px 16px;
    background-color: inherit;
    font-family: inherit;
    margin: 0;
  }
  
  .navbar a:hover, .dropdown:hover .dropbtn {
    background-color: #f2f2f2;
    color: black;
  }
  
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  .dropdown-content a {
    float: none;
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
  }
  
  .dropdown-content a:hover {
    background-color: #ddd;
  }
  
  .dropdown:hover .dropdown-content {
    display: block;
  }

  .social-icons .social-icon {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    height: 75px;
    width: 75px;
    background-color: white;
    color: blue;
    border-radius: 100%;
    font-size: 1.5rem;
    margin-right: 1.5rem;
  }
  .social-icons .social-icon:last-child {
    margin-right: 0;
  }
  .social-icons .social-icon:hover {
    background-color: gold;
  }

  .proj-image{
    width: 50%;
  }

  .proj-small{
    width: 30%;
  }

  #projects{
    justify-content: center;
    text-align: center;
  }

  #aboutme{
    width: 50%; 
    margin:auto;
  }


  @media screen and (orientation:portrait){
    #flex{
      padding-top: 5px;
      display: grid;
    }
    .flexchild{
      padding-top: 5px;
    }
    #form_page{
      -ms-transform: scale(1.1, 1.1);
      -webkit-transform: scale(1.1, 1.1);
      transform: scale(1.1, 1.1); 
    }
    .proj-image{
      width: 80%;
    }
  
    .proj-small{
      width: 40%;
    }
    #aboutme{
      width: 80%; 
      margin:auto;
    }
  }

